# deffect-supervisor

./: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  scan_logic.c  ui_dynamic.c
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_btnfail.c  ui_comp_btnfail.h  ui_comp_hook.c  ui_comp_hook.h
main/ui/images/: ui_img_2129918560.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
